# feedrattler

./: .gitignore  CHANGELOG.md  README.md  cliff.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: format.yaml  lint-pr.yml  lint.yaml  lint.yml  release.yaml  release.yml  release.yml.DISABLED  test.yaml  test.yml  update-lockfiles.yml
src/feedrattler/: __init__.py  cli.py  convert.py  utils.py
tests/: test_import.py
