[project]
name = "feedrattler"
description = "Convert conda-forge feedstock to rattler-build"
authors = [{ name = "Hadrien Mary", email = "hadrien.mary@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.11"
dependencies = [
    "pygithub >=2.5",
    "conda-smithy >=3.45",
    "ruamel.yaml >=0.18",
    "gitpython >=3.1",
    "conda-recipe-manager >=0.4.0",
    "typer >=0.15",
    "rich >=13.9",
    "python-dotenv >=1.0",
]

# NOTE: dynamic version does not work well with pixi build
# dynamic = ["version", "readme"]
dynamic = ["readme"]
version = "0.3.0"

[project.urls]
homepage = "https://github.com/hadim/feedrattler"

[project.scripts]
feedrattler = "feedrattler.cli:app"

# Build system - setuptools

[build-system]
requires = ["setuptools>=75", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["./src/"]
include = ["feedrattler*"]

[tool.setuptools.dynamic]
readme = { file = ["README.md"] }

[tool.setuptools_scm]

# Pixi configuration

[tool.pixi.workspace]
preview = ["pixi-build"]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64", "linux-aarch64"]

[tool.pixi.package]

# Pixi dependencies and features

[tool.pixi.dependencies]
python = ">=3.11"
pygithub = ">=2.5"
conda-smithy = ">=3.45"
"ruamel.yaml" = ">=0.18"
gitpython = ">=3.1"
conda-recipe-manager = ">=0.4.0"
typer = ">=0.15"
rich = ">=13.9"
python-dotenv = ">=1.0"
gh = ">=2.67.0"

[tool.pixi.pypi-dependencies]
feedrattler = { path = ".", editable = true }

[tool.pixi.feature.dev.dependencies]
pip = "*"
setuptools = ">=75"
setuptools-scm = ">=8"
ruff = "*"
jupyterlab = "*"
semver = "*"
git = "*"
python-build = "*"
pytest = "*"

[tool.pixi.feature.dev.tasks]
feedrattler = "feedrattler"
test = 'python -m pytest tests/ -vvv'
format = "ruff format -v"
lint = "ruff check -v --fix"
lint-format = { depends-on = ["format", "lint"] }

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.environments]
dev = ["dev", "py311"]
test-py311 = ["dev", "py311"]
test-py312 = ["dev", "py312"]
test-py313 = ["dev", "py313"]

# Pixi build

[tool.pixi.package.build]
backend = { name = "pixi-build-python", version = "*" }
channels = ["https://prefix.dev/pixi-build-backends", "conda-forge"]

[tool.pixi.package.host-dependencies]
pip = "*"
setuptools = ">=75"
setuptools-scm = ">=8"

[tool.pixi.package.run-dependencies]
python = ">=3.11"
pygithub = ">=2.5"
conda-smithy = ">=3.45"
"ruamel.yaml" = ">=0.18"
gitpython = ">=3.1"
conda-recipe-manager = ">=0.4.0"
typer = ">=0.15"
rich = ">=13.9"
python-dotenv = ">=1.0"
gh = ">=2.67.0"
