[project]
name = "feedrattler"
description = "Convert conda-forge feedstock to rattler-build"
authors = [{ name = "Hadrien Mary", email = "hadrien.mary@gmail.com" }]
license = "Apache-2.0"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.11"
dynamic = ["readme", "version"]
dependencies = []

[project.urls]
homepage = "https://github.com/hadim/feedrattler"

[project.scripts]
feedrattler = "feedrattler.cli:app"

# Build system - setuptools

[build-system]
requires = ["setuptools>=75", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["./src/"]
include = ["feedrattler*"]

[tool.setuptools.dynamic]
readme = { file = ["README.md"] }

[tool.setuptools_scm]

# Pixi configuration

[tool.pixi.workspace]
preview = ["pixi-build"]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64", "linux-aarch64"]

[tool.pixi.package]
version = "0.0.0.dev" # remove once pixi supports dynamic version

# Pixi dependencies and features

[tool.pixi.package.build.backend]
name = "pixi-build-python"
version = "*"

[tool.pixi.package.host-dependencies]
pip = "*"
setuptools = ">=75"
setuptools-scm = ">=8"

[tool.pixi.package.run-dependencies]
python = ">=3.11"
pygithub = ">=2.5"
conda-smithy = ">=3.45"
"ruamel.yaml" = ">=0.18"
gitpython = ">=3.1"
conda-recipe-manager = ">=0.4.0"
typer = ">=0.15"
rich = ">=13.9"
python-dotenv = ">=1.0"
gh = ">=2.67.0"

[tool.pixi.dependencies]
# feedrattler
feedrattler = { path = "." }
# dev tools
ruff = "*"
jupyterlab = "*"
pytest = "*"
# releasing tools
semver = "*"
git = "*"
gh = "*"
git-cliff = "*"

[tool.pixi.tasks]
feedrattler = "feedrattler"
tests = 'python -m pytest tests/ -vvv'
format = "ruff format"
lint = "ruff check --fix"
lint-format = { depends-on = ["format", "lint"] }

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.environments]
test-py311 = ["py311"]
test-py312 = ["py312"]
test-py313 = ["py313"]

# Ruff
[tool.ruff]
line-length = 110
indent-width = 4
target-version = "py313"
lint.extend-select = ["I"] # sort imports

# Pixi dependency updates
[tool.pixi-diff-to-markdown]
merge-dependencies = "no"
max-expanded-rows = 10
change-type-column = true
explicit-column = false
package-type-column = false
create-links-for-packages = true
